--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,10 +24,30 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+    overflow: auto;   
+  }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
+/* Works fine on the "thumb", but not on the track */
+
+::-webkit-scrollbar-thumb {
+  background-color: #f6fba2;
+background-image: linear-gradient(315deg, #f6fba2 0%, #20ded3 74%);
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  border-radius: 100px;
+}
+::-webkit-scrollbar{width: 8px;}
+::-webkit-scrollbar-track{
+  border-radius: 100px;
+  background-color: #e4e4e4;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: #5749d2;
+
+}
+
