--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,13 +84,13 @@ body {
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-.scrollbar-hidden {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-.scrollbar-hidden::-webkit-scrollbar {
-  display: none;
-}
+/* .scrollbar-hidden { */
+  /* -ms-overflow-style: none; IE and Edge */
+  /* scrollbar-width: none; Firefox */
+/* } */
+/* .scrollbar-hidden::-webkit-scrollbar { */
+  /* display: none; */
+/* } */
 
 
 
@@ -268,4 +268,34 @@ html, body {
 
     opacity: 0.7;
   }
+}
+
+
+.chat-container {
+  background-image: url('/ChatBg.jpg');
+  z-index: 0;
+  /* opacity: 0.8; */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+.chat-content {
+  position: relative;
+  z-index: 1;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #2d2d2d;
+  box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
+  border-radius: 100px;
+}
+::-webkit-scrollbar{width: 8px;}
+::-webkit-scrollbar-track{
+  border-radius: 100px;
+  background-color: #1a1a1a;
+}
+::-webkit-scrollbar-thumb:hover{
+  background-color: #3a3a3a;
+
 }
