--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -275,9 +275,9 @@ html, body {
   background-image: url('/ChatBg.jpg');
   z-index: 0;
   /* opacity: 0.8; */
-  background-size: cover;
+  background-size: contain;
   background-position: center;
-  background-repeat: no-repeat;
+  background-repeat:repeat;
   position: relative;
 }
 
@@ -298,4 +298,10 @@ html, body {
 ::-webkit-scrollbar-thumb:hover{
   background-color: #3a3a3a;
 
+}
+.autoscrollable-wrapper {
+  overflow: auto;
+  max-height:100vh;
+  display: flex;
+  flex-direction: column-reverse;
 }
