--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -299,3 +299,58 @@ html, body {
   background-color: #3a3a3a;
 
 }
+
+
+.chat-panel-bg {
+  position: relative;
+  overflow: hidden;
+}
+
+.chat-panel-bg::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/ChatBg3.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  opacity: 0.6; /* Change the opacity value as needed */
+  /* z-index: -1; */
+}
+
+
+
+.container{text-align:center} 
+
+ .search-field {
+	background-color: transparent;
+	background-image: url(https://www.citypng.com/public/uploads/preview/white-search-icon-button-png-img-735811696240431a0p3ex0i2v.png);
+	background-position: 5px  center;
+	background-repeat: no-repeat;
+	background-size: 24px 24px;
+	border: none;
+	cursor: pointer;
+	height: 35px;
+	margin: 3px 0;
+	padding: 0 0 0 34px;
+	position: relative;
+	-webkit-transition: width 400ms ease, background 400ms ease;
+	transition:         width 400ms ease, background 400ms ease;
+	width:0px;
+   cursor: pointer;
+}
+
+.search-field:focus {
+	background-color: transparent;
+	border: 2px solid #c3c0ab;
+	cursor: text;
+	outline: 0;
+	width: 250px;
+  color:#fff;
+}
+.search-form
+.search-submit { 
+display:none;
+}
